welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue: error: not found: value indexOfValue
   t.setResult( indexOfValue( t.getParameter(0).asInstanceOf[Array[Int]], t.getParameter(1).asInstanceOf[Int]) )
                ^indexOfValue:3: error: type mismatch;
 found   : Unit
 required: Int
	for (i <- 0 to nums.length-1)
               ^